--- a/School_Disctrict_Analysis/PyCitySchools.ipynb
+++ b/School_Disctrict_Analysis/PyCitySchools.ipynb
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "f55c068c",
+   "id": "c926424e",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "2ab47c78",
+   "id": "4620fae1",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "98209a47",
+   "id": "5683dfd5",
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "82bf27e7",
+   "id": "fd8a6d6b",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ef961d8d",
+   "id": "e45d4bb2",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "96d80b01",
+   "id": "ddbca8ed",
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "129aaee5",
+   "id": "c6b29149",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "7d571681",
+   "id": "8ed27e0a",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ca36efbe",
+   "id": "558befb0",
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "9060fa7a",
+   "id": "fa62d8aa",
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "1c33438a",
+   "id": "86f19e7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "52d95a34",
+   "id": "8e9140cf",
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "638b94ac",
+   "id": "25528b73",
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "dd873c02",
+   "id": "bf9357b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,7 +1895,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "8e52bc0a",
+   "id": "aee317d4",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4a58fdc4",
+   "id": "429be56d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "aa8b28eb",
+   "id": "206628fd",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c336e517",
+   "id": "9bf3cc25",
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2094,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "d14bcdac",
+   "id": "f581cfb2",
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "350cfa15",
+   "id": "984924ee",
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2138,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "ab2f6466",
+   "id": "e15b6109",
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "1acf06f7",
+   "id": "ee9337a9",
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2241,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "f51d4ffd",
+   "id": "a962ed77",
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2266,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "d9d8047f",
+   "id": "f9d91564",
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c38c1693",
+   "id": "859bf18b",
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "dd51c8b3",
+   "id": "41fa9527",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2333,7 +2333,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "af1d38ca",
+   "id": "9c5e169f",
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2355,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "966ac731",
+   "id": "73938720",
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2430,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "54ae309a",
+   "id": "864e9727",
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2469,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "c093a9cd",
+   "id": "ffb110cf",
    "metadata": {},
    "outputs": [
     {
@@ -2599,7 +2599,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "5d08375e",
+   "id": "2869ffc7",
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2637,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "f5bfd16a",
+   "id": "a4552c24",
    "metadata": {},
    "outputs": [
     {
@@ -2676,7 +2676,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "dff36445",
+   "id": "f2988faa",
    "metadata": {},
    "outputs": [
     {
@@ -2714,7 +2714,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "440c6fdd",
+   "id": "df6a2363",
    "metadata": {},
    "outputs": [
     {
@@ -2753,7 +2753,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "8f9d7aa4",
+   "id": "6306c86a",
    "metadata": {},
    "outputs": [
     {
@@ -2791,7 +2791,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "a0df1879",
+   "id": "46eb746b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2802,7 +2802,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "695a6bb3",
+   "id": "25b37691",
    "metadata": {},
    "outputs": [
     {
@@ -2832,7 +2832,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "74367671",
+   "id": "2bfbd561",
    "metadata": {},
    "outputs": [
     {
@@ -3065,7 +3065,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "a8f45315",
+   "id": "6aaebab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3078,7 +3078,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "258c5cc4",
+   "id": "19874b1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3091,7 +3091,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "4c6c1d8c",
+   "id": "37ec998d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3104,7 +3104,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "c38c71f6",
+   "id": "0041be67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3117,7 +3117,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "2e713be2",
+   "id": "d0eed427",
    "metadata": {},
    "outputs": [
     {
@@ -3260,7 +3260,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "bb01a9d5",
+   "id": "e45aa036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3271,7 +3271,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "c15d9979",
+   "id": "9360787b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3282,7 +3282,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "ed0a61b9",
+   "id": "e01b6111",
    "metadata": {},
    "outputs": [
     {
@@ -3436,7 +3436,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "1458260f",
+   "id": "79674e13",
    "metadata": {},
    "outputs": [
     {
@@ -3585,7 +3585,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "47096ebf",
+   "id": "32b7fbcc",
    "metadata": {},
    "outputs": [
     {
@@ -3732,8 +3732,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 132,
+   "id": "255608ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "9dafce8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "24b0f48a",
+   "id": "a3b7730e",
    "metadata": {},
    "outputs": [],
    "source": []
