--- a/School_Disctrict_Analysis/PyCitySchools.ipynb
+++ b/School_Disctrict_Analysis/PyCitySchools.ipynb
@@ -4040,7 +4040,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b8b134b3",
+   "id": "892794ab",
    "metadata": {},
    "outputs": [
     {
@@ -4084,7 +4084,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "248b19b3",
+   "id": "caeb8025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4101,7 +4101,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "4f286516",
+   "id": "31d3206a",
    "metadata": {},
    "outputs": [
     {
@@ -4135,7 +4135,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "866728d4",
+   "id": "4f804d9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4152,7 +4152,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "fdc395eb",
+   "id": "87150441",
    "metadata": {},
    "outputs": [
     {
@@ -4186,7 +4186,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1ad7225e",
+   "id": "d4c1e0f8",
    "metadata": {},
    "outputs": [
     {
@@ -4292,7 +4292,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8c083bb1",
+   "id": "41bf60a9",
    "metadata": {},
    "outputs": [
     {
@@ -4398,7 +4398,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "27c8afd7",
+   "id": "44caa642",
    "metadata": {},
    "outputs": [
     {
@@ -4505,7 +4505,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "bf247bf1",
+   "id": "3ab2c653",
    "metadata": {},
    "outputs": [
     {
@@ -4612,7 +4612,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "805cb297",
+   "id": "d101b85f",
    "metadata": {},
    "outputs": [
     {
@@ -4642,7 +4642,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "9b639c90",
+   "id": "6d76162f",
    "metadata": {},
    "outputs": [
     {
@@ -4681,7 +4681,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2b36f737",
+   "id": "e3310b62",
    "metadata": {},
    "outputs": [
     {
@@ -4720,7 +4720,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "28c2fdb3",
+   "id": "81a61113",
    "metadata": {},
    "outputs": [
     {
@@ -4747,7 +4747,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "6fce6dcc",
+   "id": "a36c969f",
    "metadata": {},
    "outputs": [
     {
@@ -4774,7 +4774,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "a3ab82ca",
+   "id": "2f4ceec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4786,7 +4786,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "3a770edb",
+   "id": "33797d97",
    "metadata": {},
    "outputs": [
     {
@@ -5124,7 +5124,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "0a51cc94",
+   "id": "a38bc993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5143,7 +5143,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "6d3185e5",
+   "id": "c8305d92",
    "metadata": {},
    "outputs": [
     {
@@ -5166,7 +5166,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "8965e0a1",
+   "id": "5087b091",
    "metadata": {},
    "outputs": [
     {
@@ -5285,7 +5285,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "0749560f",
+   "id": "387b5474",
    "metadata": {},
    "outputs": [
     {
@@ -5407,7 +5407,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "3b8f1ea6",
+   "id": "9febc7cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5419,7 +5419,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "770be62c",
+   "id": "b361363a",
    "metadata": {},
    "outputs": [
     {
@@ -5583,7 +5583,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "d94adbc1",
+   "id": "2e000713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5602,7 +5602,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8415c9ac",
+   "id": "88fbcaeb",
    "metadata": {},
    "outputs": [
     {
@@ -5704,7 +5704,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "eec9c754",
+   "id": "2965839f",
    "metadata": {},
    "outputs": [
     {
@@ -5808,8 +5808,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "id": "41e966b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "b39cc197",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "bb98a3ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4eeb43f8",
+   "id": "76f8c43f",
    "metadata": {},
    "outputs": [],
    "source": []
